--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h3>Muhammed Husam Arabi</h4>
             <p>
                 Age: 19 <br>
-                Major: bachelors in Computer Science <br>
+                Major: Bachelor of Science in Computer Science <br>
                 Education: University of Illinois at Chicago (Continuing Student)<br>
                 Expected graduation: Spring 2026 <br> <br>
 
