--- a/index.html
+++ b/index.html
@@ -193,34 +193,46 @@
         </section>
         <section id="Hobbies" class="tabcontent">
             <h2>Hobbies</h2>
-            <h3>Soccer</h3>
-            <img src="soccer.jpg" alt="soccer Image" class="soccer-img">
-            <p>
-                Since I was five years old and watched the world cup in 2010 on the television with my family, 
-                I developed a huge passion for the sport of soccer. Whether its playing for fun, 
-                or competetivly or even just watching soccer, I get the same enthusiastic passionate enjoyment. 
-                Soccer has and will continue to be a great passion and part of my identity 
-            </p>
-            <h3>VideoGames</h3>
-            <img src="VideoGames.jpg" alt="VideoGames Image" class="VideoGames-img">
-            <p>
-                There is nothing better than relaxing and playing video games after a long day. 
-                My first exposure to video games was when I was 4 and played Wii sports and Mario kart on my wii. 
-                I then began playing higher level strategy games with high skill requirements such as Call of duty and Rocket league. 
-                Video games for me has been a great distraction and way of challenging the brain 
-                in different unique ways through hand eye coordination. 
-                My passion for videogames inspired me to get into computer science and 
-                potentially get into a career of game design
-            </p>
-            <h3>Travel</h3>
-            <img src="travel.jpg" alt="travel Image" class="travel-img">
-            <p>
-                I have been lucky enough to have had the opportunity to travel to 4 different continents and 10 different countries.
-                these countries are Canada, Ireland, United Kingdom, Switzerland, Turkiye, Jordon, Qatar, UAE, Egypt and most importantly my country of Sudan. 
-                I love the expierence of going to different airports and places with different cultures, languages, and lifestyles around the world. <br> <br>
-            </p>
-
+            <div class="hobby">
+                <img src="soccer.jpg" alt="soccer Image" class="hobby-img">
+                <div>
+                    <h3>Soccer</h3>
+                    <p>
+                        Since I was five years old and watched the world cup in 2010 on the television with my family, 
+                        I developed a huge passion for the sport of soccer. Whether its playing for fun, 
+                        or competetivly or even just watching soccer, I get the same enthusiastic passionate enjoyment. 
+                        Soccer has and will continue to be a great passion and part of my identity 
+                    </p>
+                </div>
+            </div>
+            <div class="hobby">
+                <img src="VideoGames.jpg" alt="VideoGames Image" class="VideoGames-img">
+                <div>
+                    <h3>Video Games</h3>
+                    <p>
+                        There is nothing better than relaxing and playing video games after a long day. 
+                        My first exposure to video games was when I was 4 and played Wii sports and Mario kart on my wii. 
+                        I then began playing higher level strategy games with high skill requirements such as Call of duty and Rocket league. 
+                        Video games for me has been a great distraction and way of challenging the brain 
+                        in different unique ways through hand eye coordination. 
+                        My passion for videogames inspired me to get into computer science and 
+                        potentially get into a career of game design
+                    </p>
+                </div>
+            </div>
+            <div class="hobby">
+                <img src="travel.jpg" alt="travel Image" class="hobby-img">
+                <div>
+                    <h3>Travel</h3>
+                    <p>
+                        I have been lucky enough to have had the opportunity to travel to 4 different continents and 10 different countries.
+                        these countries are Canada, Ireland, United Kingdom, Switzerland, Turkiye, Jordon, Qatar, UAE, Egypt and most importantly my country of Sudan. 
+                        I love the expierence of going to different airports and places with different cultures, languages, and lifestyles around the world.
+                    </p>
+                </div>
+            </div>
         </section>
+        
     </main>
     <footer>
         <p>&copy; 2024 Muhammed Arabi</p>
