--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                 Major: Bachelor of Science in Computer Science <br>
                 Education: University of Illinois at Chicago (Continuing Student)<br>
                 Expected graduation: Spring 2026 <br> <br>
-
+                
+                Phone Number: (630)-333-0416 <br>
+                Email: muhammedharabi10@gmail.com <br><br>
+                
                 About me: <br>
                 Enthusiastic and dedicated 3rd year Computer Science student with a 
                 solid foundation in software development, problem-solving, and computer 
