--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 and quantifiers. <br>
             </p>
             <h3>CS 211 Programming Practicum</h3>
-            <h4>Fall 2023</h4>
+            <h4>Fall 2023 (UIC)</h4>
             <p>
                 This course introduced various debugging techniques and practices 
                 as well as further software development tools and practices. 
@@ -90,7 +90,7 @@
                 Coding language(s) used: <b>C++</b>, <b>C</b> <br>
             </p>
             <h3>CS 251 Data Structures</h3>
-            <h4>Fall 2023</h4>
+            <h4>Fall 2023 (UIC)</h4>
             <p>
                 This course provided important usage and analysis of various data structurs such 
                 as lists, stacks and queues, hash tables, search trees, and graphs. 
@@ -99,7 +99,7 @@
                 Coding language(s) used: <b>C++</b> <br>
             </p>
             <h3>CS 261 Machine Organization</h3>
-            <h4>Spring 2024</h4>
+            <h4>Spring 2024 (UIC)</h4>
             <p>
                 This course handles storage management and data representation in 
                 machine langauge of programs and data. 
@@ -108,7 +108,7 @@
                 Coding language(s) used: <b>C++</b>, <b>C</b> <br>
             </p>
             <h3>CS 301 Languages and Automata</h3>
-            <h4>Spring 2024</h4>
+            <h4>Spring 2024 (UIC)</h4>
             <p>
                 This course introduced various theoretical computer concepts such as Parsing, 
                 context free langauges, Turing Machines, decidabilty and Chomsky hierchy of grammers. 
