--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
                     <p>
                         Since I was five years old and watched the world cup in 2010 on the television with my family, 
                         I developed a huge passion for the sport of soccer. Whether its playing for fun, 
-                        or competetivly or even just watching soccer, I get the same enthusiastic passionate enjoyment. 
+                        or competitively or even just watching soccer, I get the same enthusiastic passionate enjoyment. 
+                        I played competitively for club in middle school and had the opportunity to play for my high school. 
                         Soccer has and will continue to be a great passion and part of my identity 
                     </p>
                 </div>
