--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <h3>- Target</h3>
             <p>
                 May 2024 - August 2024<br>
-                Position: Front of Store Attendant <br>
+                Position: Front of Store Attendant <br> <br>
                 Description: All round front end team member 
                 that worked at registers as cashiers to assist with guest shopping, 
                 helped with drive up in providing guests with there orders 
@@ -144,7 +144,7 @@
             <h3>- Kohls</h3>
             <p>
                 March 2023 - August 2023 <br>
-                Position: Stockroom Operations Associate <br>
+                Position: Stockroom Operations Associate <br> <br>
                 Desrciption: Well rounded team member that worked at amazon station to  
                 return amazon orders, restocked inventory from truck, 
                 and performed omni duty to complete online orders <br> <br>
