--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         <div class="header-text">
             <h1>Muhammed Arabi</h1>
             <p>3rd year UIC CS student</p>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/muhammed-arabi-b9659926b/" target="_blank">
+                    <img src="linkedin.png" alt="LinkedIn Logo" class="social-logo">
+                </a>
+                <a href="https://www.instagram.com/muha.mmed10/" target="_blank">
+                    <img src="instagram.png" alt="Instagram Logo" class="social-logo">
+                </a>
+            </div>
         </div>
     </header>
     <div class="tabs">
@@ -20,6 +28,7 @@
         <button class="tablinks" onclick="openSection(event, 'Languages')">Coding Languages</button>
         <button class="tablinks" onclick="openSection(event, 'Experience')">Work Experience</button>
         <button class="tablinks" onclick="openSection(event, 'Projects')">Projects</button>
+        <button class="tablinks" onclick="openSection(event, 'PersonalProjects')">Personal Projects</button>
         <button class="tablinks" onclick="openSection(event, 'Hobbies')">Hobbies</button>
     </div>
     <main>
@@ -74,7 +83,7 @@
                 programming excercies in C++ <br> <br>
                 Coding language(s) used: <b>C++</b> <br>
             </p>
-            <h3>CS 151 Foundations of Computing</h3>
+            <h3>CS 151 Foundations of Computing</h4>
             <h4>Spring 2023 (UIC)</h4>
             <p>
                 This course introduced important discrete math 
@@ -194,6 +203,19 @@
                 <button class="download-button" onclick="window.location.href='Queue.zip'">Download Project File</button>
             </p>
         </section>
+        <section id="PersonalProjects" class="tabcontent">
+            <h2>Personal Projects</h2>
+            <h4>3D Obstacle Course Game:</h4>
+            <p>
+                A 3D game where the player navigates through an obstacle course. <br>
+                <a href="https://muharabi.github.io/Obstacle-Roll/" target="_blank">Play the Game</a>
+            </p>
+            <h4>Connect 4 Game:</h4>
+            <p>
+                An online version of the classic Connect 4 game. <br>
+                <a href="https://muharabi.github.io/Connect4/" target="_blank">Play the Game</a>
+            </p>
+        </section>
         <section id="Hobbies" class="tabcontent">
             <h2>Hobbies</h2>
             <div class="hobby">
@@ -236,10 +258,9 @@
                 </div>
             </div>
         </section>
-        
     </main>
     <footer>
-        <p>&copy; 2024 Muhammed Arabi</p>
+        <p>&copy; 2023 Muhammed H Arabi</p>
     </footer>
     <script src="scripts.js"></script>
 </body>
