--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <img src="linkedin.png" alt="LinkedIn Logo" class="social-logo">
                 </a>
                 <a href="https://www.instagram.com/muha.mmed10/" target="_blank">
-                    <img src="instagram.png" alt="Instagram Logo" class="social-logo">
+                    <img src="Instagram.jpg" alt="Instagram Logo" class="social-logo">
                 </a>
             </div>
         </div>
