--- a/index.html
+++ b/index.html
@@ -165,20 +165,18 @@
             <p>
                 May 2024 - August 2024<br>
                 Position: Front of Store Attendant <br> <br>
-                Description: All round front end team member 
-                that worked at registers as cashiers to assist with guest shopping, 
-                helped with drive up in providing guests with there orders 
-                to there vehicles in a timely manner, 
-                and helped keep the store in good shape as cart attendant by 
-                hauling carts back in the store at a regular basis 
+                Description: As a versatile front-end team member, I handled a range of responsibilities 
+                including working at the registers to assist guests with their purchases, managing the 
+                drive-up service to ensure timely delivery of orders to customers' vehicles, and maintaining 
+                the store's appearance as a cart attendant by regularly collecting and returning shopping carts.
             </p>
             <h3>- Kohls</h3>
             <p>
                 March 2023 - August 2023 <br>
                 Position: Stockroom Operations Associate <br> <br>
-                Desrciption: Well rounded team member that worked at amazon station to  
-                return amazon orders, restocked inventory from truck, 
-                and performed omni duty to complete online orders <br> <br>
+                Description: As a well-rounded team member at an Amazon station, 
+                I managed returns of Amazon orders, restocked inventory from trucks, 
+                and fulfilled omni-channel duties to complete online orders efficiently. <br> <br>
             </p>
         </section>
         <section id="Projects" class="tabcontent">
@@ -229,13 +227,13 @@
             <h2>Personal Projects</h2>
             <h4>3D Obstacle Course Game:</h4>
             <p>
-                A 3D game where the player navigates through an obstacle course. <br>
-                <a href="https://muharabi.github.io/Obstacle-Roll/" target="_blank">Play the Game</a>
+                3D obstacle course game involving multiple courses, obstacles and speed options. <br>
+                <a href="https://muharabi.github.io/Obstacle-Roll/" target="_blank">Play</a>
             </p>
             <h4>Connect 4 Game:</h4>
             <p>
-                An online version of the classic Connect 4 game. <br>
-                <a href="https://muharabi.github.io/Connect4/" target="_blank">Play the Game</a>
+                An online version of the classic Connect 4 game with AI. <br>
+                <a href="https://muharabi.github.io/Connect4/" target="_blank">Play</a>
             </p>
         </section>
         <section id="Hobbies" class="tabcontent">
@@ -257,13 +255,12 @@
                 <img src="VideoGames.jpg" alt="Video Games Image" class="hobby-img">
                 <h3>Video Games</h3>
                 <p>
-                    There is nothing better than relaxing and playing video games after a long day. 
-                    My first exposure to video games was when I was 4 and played Wii sports and Mario Kart on my Wii. 
-                    I then began playing higher level strategy games with high skill requirements such as Call of Duty and Rocket League. 
-                    Video games for me have been a great way of challenging the brain 
-                    in unique ways through hand-eye coordination. 
-                    My passion for video games inspired me to get into computer science and 
-                    potentially pursue a career in game design.
+                    There's nothing quite like unwinding with video games after a long day. 
+                    My journey with gaming began at age 4 with Wii Sports and Mario Kart on the Wii. 
+                    As I grew older, I moved on to more complex strategy games like Call of Duty and Rocket League, 
+                    which tested my skills and hand-eye coordination in new ways. This passion for video games not only 
+                    provides a unique mental challenge but also inspired me to pursue computer science and explore a potential 
+                    career in game design.
                 </p>
             </div>
         
@@ -271,9 +268,10 @@
                 <img src="travel.jpg" alt="Travel Image" class="hobby-img travel-img">
                 <h3>Travel</h3>
                 <p>
-                    I have been lucky enough to have had the opportunity to travel to 4 different continents and 10 different countries.
-                    These countries include Canada, Ireland, the United Kingdom, Switzerland, Turkiye, Jordan, Qatar, UAE, Egypt, and most importantly, my home country of Sudan. 
-                    I love the experience of exploring different airports and places with diverse cultures, languages, and lifestyles around the world.
+                    I've been fortunate to travel across four continents and explore ten incredible countries: 
+                    Canada, Ireland, the United Kingdom, Switzerland, Turkiye, Jordan, Qatar, UAE, Egypt, 
+                    and my beloved home country, Sudan. I relish the adventure of discovering new airports, cultures, 
+                    languages, and lifestyles around the globe.
                 </p>
             </div>
         </section>        
