--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
                 <a href="https://muharabi.github.io/Obstacle-Roll/" target="_blank">Play Web Version</a> <br><br>
                 <!-- Download button for Windows version -->
                 <button class="download-button" onclick="window.location.href='https://drive.google.com/uc?export=download&id=123TmSzIcmfuIv0gEYm_uTzM6S2LuDJ8T'">Download Windows Version</button> <br><br>
-                <button class="download-button" onclick="window.location.href='https://drive.google.com/uc?export=download&id=1qx05gVH_xxerniQzyORWKh-8JkYHCuas'">Download Linux Version</button>
+                <button class="download-button" onclick="window.location.href='https://drive.google.com/uc?export=download&id=1qx05gVH_xxerniQzyORWKh-8JkYHCuas'">Download Linux Version</button> <br><br>
+                <button class="download-button" onclick="window.location.href='https://drive.google.com/uc?export=download&id=1Psmg1nq5YTnepWOEWGYJDuzebKT87yhw'">Download Mac Version</button>
+                
 
             </p>
         
