Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main>
         <section id="Profile" class="tabcontent">
             <div class="profile-container">
-                <img src="Profile.png" alt="Profile Image" class="profile-img" />
+                <img src="Profile.jpg" alt="Profile Image" class="profile-img" />
                 <h2 class="profile-heading">Muhammed Husam Arabi</h2>
                 <p class="profile-subheading">4th Year CS Student @ UIC</p>
         
@@ -379,3 +379,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
