Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <span>Major:</span> <span>Computer Science</span>
                     </div>
                     <div class="info-row">
-                        <span>University:  </span> <span>University of Illinois at Chicago</span>
+                        <span>University:</span> <span>UIC</span>
                     </div>
                     <div class="info-row">
                         <span>Graduation:</span> <span>Spring 2026</span>
@@ -342,6 +342,7 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
