--- a/index.html
+++ b/index.html
@@ -10,21 +10,36 @@
 
 </head>
 <body>
-    <header>
-        <img src="uic.png" alt="UIC Logo" class="header-img"/>
-        <div class="header-text">
+    <header class="site-header">
+        <div class="header-center">
+
             <h1>Muhammed Arabi</h1>
-            <p>4th Year UIC CS Student</p>
-            <div class="social-links">
+            <p class="header-subtitle">
+                4th Year Computer Science Student · UIC
+            </p>
+
+            <div class="header-socials">
                 <a href="https://www.linkedin.com/in/muhammed-arabi-b9659926b/" target="_blank">
-                    <img src="linkedin.png" alt="LinkedIn Logo" class="social-logo"/>
+                    <img src="linkedin.png" alt="LinkedIn">
                 </a>
                 <a href="https://www.instagram.com/muhammed_arabi10/" target="_blank">
-                    <img src="instagram.png" alt="Instagram Logo" class="social-logo"/>
+                    <img src="instagram.png" alt="Instagram">
                 </a>
             </div>
+
+            <!-- Quotes -->
+            <div class="quote-row">
+                <div class="quote-pill">Calm under pressure</div>
+                <div class="quote-pill">Patience over panic</div>
+                <div class="quote-pill">Learn. Build. Refine.</div>
+                <div class="quote-pill">Earn trust through consistency.</div>
+            </div>
+
         </div>
     </header>
+
+
+
 
     <div class="tabs">
         <button class="tablinks" aria-controls="Profile" onclick="openSection(event, 'Profile')">Profile</button>
